--- a/style/style.css
+++ b/style/style.css
@@ -99,3 +99,40 @@ h1,h2,h3,h4,h5{
 .nav{
 	margin-top: 10px;
 }
+
+/*section*/
+
+.section{
+	padding: 0 80px;
+
+}
+
+.section__header{
+margin-bottom: 40px;
+}
+
+.section__suptitle{
+	padding-top: 120px;
+	padding-left: 30px;
+	color: #04FF00;
+	transition: opacity .2 linear;
+
+}
+
+.section__suptitle:hover{
+	color: #029400;
+	border-bottom: 1px solid #029400;
+}
+
+.section__text{
+	padding-left: 30px;
+	padding-right: 15px;
+	color: #04FF00;
+}
+.msa{
+	width: 110px;
+	height: 110px;
+	padding-left: 20px;
+	
+
+}
